Mes premiers changements

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Ma première page HTML</title>
-<meta charset="utf-8"/>
-</head>
-<body>
-<h1>Il s'agit d'un exemple de HTML</h1>
-<div>
-HTML est un langage de description de pages Web.
-</div>
-</body>
+    <head>
+        <title>Ma première page HTML</title>
+        <meta charset="utf-8"/>
+    </head>
+
+    <body>
+        <h1>Il s'agit d'un exemple de HTML</h1>
+        <div>
+          <font color="#DD7700">  <b>HTML</b></font> est un langage de description de pages Web.
+        </div>
+
+        <br>
+        <br>
+        <font color="blue" face="arial"> Bonjour tout le monde !! </font>
+    </body>
 </html
