--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div>
           <font color="#DD7700">  <b>HTML</b></font> est un langage de description de pages Web.
         </div>
-
+            <h2><strong><i><strike>TexteCeci est un texte à afficher</strike></i></strong></h2>
         <br>
         <br>
         <font color="blue" face="arial"> Bonjour tout le monde !! </font>
