--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
     <head>
         <title>Ma première page HTML</title>
         <meta charset="utf-8"/>
+        <link rel="shortcut icon" href="/static/favicon/wikipedia.ico"/>
     </head>
 
-    <body>
-        <h1>Il s'agit d'un exemple de HTML</h1>
+    <body bgcolor="orange">
+        <h1><font color="#FF5733">Il s'agit</font> d'un exemple de HTML</h1>
         <div>
           <font color="#DD7700">  <b>HTML</b></font> est un langage de description de pages Web.
         </div>
-            <h2><strong><i><strike>TexteCeci est un texte à afficher</strike></i></strong></h2>
+            <h2><strong><i><strike>Ceci est un texte à afficher</strike></i></strong></h2>
         <br>
         <br>
         <font color="blue" face="arial"> Bonjour tout le monde !! </font>
+        <br>    
+        <br>
+        <font color="#D535D7">Exemple de caractères spéciaux :</font>  &quot; &amp; &lt; &gt; &oelig; &nbsp; &pound; &copy; &reg; &plusmn; &micro; &frac12; &Ccedil; &aelig; 
     </body>
 </html
