--- a/index1.html
+++ b/index1.html
@@ -12,15 +12,12 @@
 <br>
 <br>
             <b>HTML est un langage de description de pages WEB et non pas un langage de programmation</b>
+        
+<br>
+<br>
+            <s>HTML est un langage de description de pages WEB et non pas un langage de programmation</s>
+
         </div>
-<br>
-<br>
-                Les noms des balises de base à déclarer dans un document HTML sont :
-                    <ul type="3">
-                        <li>HTML</li>
-                        <li>HEAD</li>
-                        <li>BODY</li>
-                    </ul
-    
+
     </body>
 </html
