intervertion index1 et index2

--- a/index1.html
+++ b/index1.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Titre de ma page Web</title>
+        <title>Ma page 1</title>
         <meta charset="utf-8"/>
     
     </head>
 
     <body bgcolor="green">
         <div>
-            <u>HTML est un langage de description de pages WEB et non pas un langage de programmation</u>
+            <u><b>HTML</b> est un langage de description de pages Web</u> et non pas un langage de <s>programmation</s>
 <br>
-<br>
-            <b>HTML est un langage de description de pages WEB et non pas un langage de programmation</b>
-        
-<br>
-<br>
-            <s>HTML est un langage de description de pages WEB et non pas un langage de programmation</s>
-
-        </div>
-
-    </body>
-</html
