--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ma page 1</title>
+        <title>Ma page 2</title>
         <meta charset="utf-8"/>
     
     </head>
 
     <body bgcolor="green">
         <div>
-            <u><b>HTML</b> est un langage de description de pages Web</u> et non pas un langage de <s>programmation</s>
+            <u>HTML est un langage de description de pages WEB et non pas un langage de programmation</u>
 <br>
+<br>
+            <b>HTML est un langage de description de pages WEB et non pas un langage de programmation</b>
+        
+<br>
+<br>
+            <s>HTML est un langage de description de pages WEB et non pas un langage de programmation</s>
+
+        </div>
+
+    </body>
+</html
