changement couleur de fond

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     
     </head>
 
-    <body bgcolor="green">
+    <body bgcolor="lightgreen">
         <div>
             <u>HTML est un langage de description de pages WEB et non pas un langage de programmation</u>
 <br>
