changement couleur de fond index1

--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
     
     </head>
 
-    <body bgcolor="green">
+    <body bgcolor="lightgreen">
         <div>
             <u><b>HTML</b> est un langage de description de pages Web</u> et non pas un langage de <s>programmation</s>
 <br>
