--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><br>
 <html>
     <head>
         <title>Ma page 1</title>
@@ -9,4 +9,37 @@
     <body bgcolor="lightgreen">
         <div>
             <u><b>HTML</b> est un langage de description de pages Web</u> et non pas un langage de <s>programmation</s>
+
+
+            <h1>Titre de premier niveau</h1>
+            <h2>Titre de second niveau</h2>
+            <h3>Titre de troisième niveau</h3>
+            <h4>Titre de quatrième niveau</h4>
+            <h5>Titre de cinquième niveau</h5>
+
+            <font color="#DD7700"><b>x<sup>2</sup><br>H<sub>2</sub>0</b></font></br>
+            <br>
+            <font color="#D535D7">
+            Ligne 1 <br>
+            Ligne 2 <br>
+            Ligne 3 </font>
 <br>
+            <pre>
+                Là-haut sur la montagne, l'était un vieux chalet. 
+                Mur blancs, toit de bardeaux,
+                Devant la porte un vieux bouleau.
+                Là-haut sur la montagne, l'était un vieux chalet.
+            </pre>
+<br>
+            <font face=arial size=3 color=#D80DBF>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap 
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. 
+            </font>
+
+        
+        </div> 
+
+<br>
+</html>
