--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,25 @@
 <br>
 <br>
             <s>HTML est un langage de description de pages WEB et non pas un langage de programmation</s>
+<br>
+<br>
+            <p align=right><font color="#D535D7">
+               Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
+               old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
+              Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
+            </font></p>
+
+<br>
+            <p align=left color="#D535D7">
+               Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
+               old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
+               Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
+            </p>
+
+<br>
+<br>
+<a href="index2.html">Ma page 2</a>
+</body>
 
         </div>
 
