--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>Accueil</title>
         <meta charset="utf-8"/>
-    
     </head>
 
     <body bgcolor="orange">
@@ -17,6 +16,12 @@
         <font color="blue" face="arial"> Bonjour tout le monde !! </font>
         <br>    
         <br>
-        <font color="#D535D7">Exemple de caractères spéciaux :</font>  &quot; &amp; &lt; &gt; &oelig; &nbsp; &pound; &copy; &reg; &plusmn; &micro; &frac12; &Ccedil; &aelig; 
+        <font color="#D535D7">Exemple de caractères spéciaux :</font>  &quot; &amp; &lt; &gt; &oelig; &nbsp; &pound; &copy; &reg; &plusmn; &micro; &frac12; &Ccedil; &aelig; <br>
+         <div>
+             Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. 
+             Richard McClintock, a Latin professor at Hampden-Sydne y College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, 
+             and going through the cites of the word in classical literature, discovered the undoubtable source.</div><br>       
+        <a href="index1.html">Ma page 1</a><br>
+        <a href="index2.html">Ma page 2</a>
     </body>
-</html
+</html>
