--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
                 <p>L'<strong>Élément HTML <code>&lt;blockquote&gt;</code></strong> (ou <em>Élément HTML bloc de citation</em>)
                    indique que le bloc de texte inclus est une citation étendue.</p>
               </blockquote><br><br>
-              <p>Salut et bienvenue sur ma page de motivation. Comme <a href="http://www.brainyquote.com/quotes/authors/c/confucius.html"><cite>Confucius</cite></a> a dit en son temps :</p>
+              <p>Salut et bienvenue sur ma page de motivation. Comme <a href="http://www.brainyquote.com/quotes/authors/c/confucius.html" target="_blank"><cite>Confucius</cite></a> a dit en son temps :</p>
 
                 <blockquote cite="http://www.brainyquote.com/quotes/authors/c/confucius.html">
                     <p>La lenteur avec laquelle vous allez n'a pas d'importance tant que vous ne vous arrêtez pas.</p>
