--- a/index.html
+++ b/index.html
@@ -20,7 +20,27 @@
          <div>
              Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. 
              Richard McClintock, a Latin professor at Hampden-Sydne y College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, 
-             and going through the cites of the word in classical literature, discovered the undoubtable source.</div><br>       
+             and going through the cites of the word in classical literature, discovered the undoubtable source.</div><br>
+             
+             <p><b>Classement de la Ligue 1 Ubert Eats 2021-2022 :</b><br>
+
+                <ol <align=left type="1">
+                    <li>Olympique de Marseille</li>
+                    <li>OGC Nice</li>
+                    <li>AS Monaco</li>
+                    <li>Olympique Lyonnais</li>
+                    <li>Paris Saint-Germain</li>
+                </ol>
+            </p>
+
+                Les candidats déclarés à l'élection présidentielle :
+<ul type="1">
+<li>HTML</li>
+<li>HEAD</li>
+<li>BODY</li>
+</ul
+
+
         <a href="index1.html">Ma page 1</a><br>
         <a href="index2.html">Ma page 2</a>
     </body>
