--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
     <body bgcolor="lightgreen">
             <u><b>HTML</b> est un langage de description de pages Web</u> et non pas un langage de <s>programmation</s>
 
-            <h1>Titre de premier niveau</h1>
+            <h1 align=center> Titre de premier niveau</h1>
             <h2>Titre de second niveau</h2>
             <h3>Titre de troisième niveau</h3>
             <h4>Titre de quatrième niveau</h4>
