Ajout img + video

--- a/index.html
+++ b/index.html
@@ -34,11 +34,39 @@
             </p>
 
                 Les candidats déclarés à l'élection présidentielle :
-<ul type="1">
-<li>HTML</li>
-<li>HEAD</li>
-<li>BODY</li>
-</ul
+                <ul square type="1">
+                    <li>Emmannuel Macron</li>
+                    <li>Valérie Pécresse</li>
+                    <li>Jean-Luc Mélenchon</li>
+                    <li>Marine Le Pen</li>
+                    <li>Éric Zemmour</li>
+                    <li>Anne Hidalgo</li>
+                    <li>...</li>
+
+                </ul><br>
+
+                     <img src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Images\YH.jpg" alt="Moi" height="200"> &nbsp;
+                     <img src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Images\YH.jpg" alt="Moi" height="200"> &nbsp;
+                <align="right">
+                     <img src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Images\YH.jpg" alt="Moi" height="200"> &nbsp;
+                     <img src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Images\YH.jpg" alt="Moi" height="200"> &nbsp; <br>
+                </align>
+
+
+                <figure>
+                    <figcaption>Écoutez le T-Rex :</figcaption>
+                    <audio controls src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Medias\t-rex-roar.mp3">
+                    Votre navigateur ne supporte pas cette fonction
+                    <code>audio</code> element.
+                    </audio>
+                </figure>
+                
+                <figure>
+                    <figcaption><b>Regardez cette vidéo :</b></figcaption>
+                    <video width="320" height="240" controls>    
+                    <source src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Medias\mov_bbb.mp4" type="video/mp4">
+                    Votre navigateur ne supporte pas cette fonction
+                </video></figure><br>
 
 
         <a href="index1.html">Ma page 1</a><br>
