Ajout cv + images

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         </div>
             <h2><strong><i><strike>Ceci est un texte à afficher</strike></i></strong></h2>
         <br>
-        <br>
         <font color="blue" face="arial"> Bonjour tout le monde !! </font>
         <br>    
+        <br>
+        <a href="#videoYouTube"><b>Aller directement à la vidéo Youtube</b></a><br>
         <br>
         <font color="#D535D7">Exemple de caractères spéciaux :</font>  &quot; &amp; &lt; &gt; &oelig; &nbsp; &pound; &copy; &reg; &plusmn; &micro; &frac12; &Ccedil; &aelig; <br>
          <div>
@@ -45,17 +46,16 @@
 
                 </ul><br>
 
-                     <img src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Images\YH.jpg" alt="Moi" height="200"> &nbsp;
-                     <img src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Images\YH.jpg" alt="Moi" height="200"> &nbsp;
-                <align="right">
-                     <img src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Images\YH.jpg" alt="Moi" height="200"> &nbsp;
-                     <img src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Images\YH.jpg" alt="Moi" height="200"> &nbsp; <br>
-                </align>
+                     <img src="Images/YH.jpg" alt="Moi" height="200"> &nbsp;
+                     <img src="Images/YH.jpg" alt="Moi" height="200"> &nbsp;
+                     <img src="Images/YH.jpg" alt="Moi" height="200"> &nbsp;
+                     <img src="Images/YH.jpg" alt="Moi" height="200"> &nbsp; <br>
+                
 
 
                 <figure>
                     <figcaption>Écoutez le T-Rex :</figcaption>
-                    <audio controls src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Medias\t-rex-roar.mp3">
+                    <audio controls src="Medias/t-rex-roar.mp3">
                     Votre navigateur ne supporte pas cette fonction
                     <code>audio</code> element.
                     </audio>
@@ -64,12 +64,34 @@
                 <figure>
                     <figcaption><b>Regardez cette vidéo :</b></figcaption>
                     <video width="320" height="240" controls>    
-                    <source src="C:\Users\Administrateur\Desktop\Formation\HTML-CSS\MonSiteWeb-Dev\Medias\mov_bbb.mp4" type="video/mp4">
+                    <source src="Medias/mov_bbb.mp4" type="video/mp4">
                     Votre navigateur ne supporte pas cette fonction
                 </video></figure><br>
 
 
-        <a href="index1.html">Ma page 1</a><br>
-        <a href="index2.html">Ma page 2</a>
+                <div>
+                    <b>Exemple d'utilisation d'un lien.</b><br>
+                    <center>
+                    <a href="https://www.youtube.com/watch?v=gp_k0UVOYMw" title="Les bases du GIT" target="_blank">Regarder "Les bases de Git", tutoriel débutant</a><br>
+                    </center>
+                </div>
+
+<br>
+<br>
+<br><br><br>
+
+                <div>
+                    <a name="videoYouTube"></a><br>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/gp_k0UVOYMw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>  
+
+                <br><br><br>
+                <a href="index2.html" traget="_blank"><img src="Images/pastille2.jpg" title="Accéder à la page 2" width="450" height="300"></a>
+
+
+<br>
+<br>
+        <a href="index1.html" target="_blank">Ma page 1</a><br>
+        <a href="index2.html"target="_blank">Ma page 2</a>
     </body>
 </html>
