--- a/index1.html
+++ b/index1.html
@@ -48,5 +48,11 @@
                 Il est nécessaire d'éliminer le discours négatif sur soi-même </q>
                 (comme dit dans <a href="http://www.affirmationsforpositivethinking.com/index.htm"><cite>Affirmations for Positive Thinking</cite></a>.)</p>
             </blockquote><br><br>
+<br>
+<br>
 
-</html>
+            <a href="index.html" target="_blank">Accueil</a><br>
+            <a href="index2.html"target="_blank">Ma page 2</a>
+
+
+</html><br><br><br>
