--- a/index2.html
+++ b/index2.html
@@ -34,9 +34,6 @@
 <br>
 <br>
 
-</body>
-
-        </div>
-
-    </body>
+            <a href="index.html" target="_blank">Accueil</a><br>
+            <a href="index2.html" target="_blank">Ma page 1</a>
 </html
