--- a/monCV.html
+++ b/monCV.html
@@ -7,10 +7,10 @@
 
 
 
-    <body>
+    <body background-image: "Images/fondBleu.jpg">
         <h1 align="center"><b>Curriculum Vitae</b></h1><br><br><br>
             
-                <table cellspacing="4" >
+                <table right cellspacing="4" >
                     <tr>
                         <td rowspan="5" align="center"><img src="Images/YH.jpg" alt="Moi" height="200"></p>
                         <td align="right" width="20%">Nom :<b>HOURDIAU</b></td>
@@ -44,7 +44,7 @@
         <p>
             <ul square type="1">
                 <li>2021 : M2i</li>
-                <li>2019 : Éecole Pigier Valenciennes : Bachelor Responsable Communication et Webmarketing</li>
+                <li>2019 : École Pigier Valenciennes : Bachelor Responsable Communication et Webmarketing</li>
                 <li>2004 : École de Vente Renault à Lille</li>
                 <li>2001 : BTS Force de Vente </li>
                 <li>1999 : Baccalauréat L Math</li>
