Mise en forme arriere plan

--- a/monCV.html
+++ b/monCV.html
@@ -7,7 +7,7 @@
 
 
 
-    <body background-image: "Images/fondBleu.jpg">
+    <body style="background-image: url('Images/fondBleu.jpg'); background-repeat: no-repeat; background-size: cover;">
         <h1 align="center"><b>Curriculum Vitae</b></h1><br><br><br>
             
                 <table right cellspacing="4" >
